# cmark

./: .editorconfig  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  COPYING  Makefile  Makefile.nmake  Package.swift  README.md  appveyor.yml  benchmarks.md  changelog.txt  circle.yml  conanfile.py  flake.nix  shell.nix  suppressions  toolchain-mingw32.cmake  why-cmark-and-not-x.md
.github/workflows/: ci.yml  codeql.yml  fuzz.yml
api_test/: CMakeLists.txt  cplusplus.cpp  delim_test.c  delim_test.h  harness.c  harness.h  main.c
cmake/: TargetProperties.cmake
debian/: changelog  control  copyright  rules  watch
debian/source/: options
extensions/: CMakeLists.txt  autolink.c  cmark-gfm-core-extensions.h  core-extensions.c  core-extensions.h  ext_scanners.c  ext_scanners.h  ext_scanners.re  strikethrough.c  table.c  table.h  tagfilter.c  tasklist.c  whitelist.c  whitelist.h
extensions/include/: cmark-gfm-core-extensions.h
fuzz/: CMakeLists.txt  README.md  cmark-fuzz.c  dictionary  fuzz_quadratic.c  fuzz_quadratic_brackets.c  fuzzloop.sh
lua/: Makefile  cmark.i  filter.lua
man/: CMakeLists.txt  make_man_page.py
man/man1/: cmark-gfm.1  cmark.1
man/man3/: cmark-gfm.3  cmark.3
parser_test/: CMakeLists.txt  block_quote_tests.c  code_tests.c  formula_block_tests.c  formula_inline_tests.c  heading_tests.c  image_tests.c  link_tests.c  mark_tests.c  strikethrough_tests.c  table_tests.c  test_utils.c  test_utils.h
src/: CMakeLists.txt  arena.c  bench.h  blocks.c  buffer.c  buffer.h  case_fold.inc  case_fold_switch.inc  chunk.h  cmark-format.in  cmark-gfm-extension_api.h  cmark-gfm.h  cmark.c  cmark.h  cmarkConfig.cmake.in  cmark_ctype.c  cmark_ctype.h  cmark_delim.c  cmark_delim.h  cmark_export.h.in  cmark_extension_api.h  cmark_version.h.in  cmark_wrap.c  commonmark.c  config.h.in  entities.h  entities.inc  entity.c  entity.h  front_matter.c  front_matter.h  houdini.h  houdini_href_e.c  houdini_html_e.c  houdini_html_u.c  html.c  html_unescape.gperf  html_unescape.h  inlines.c  inlines.h  (+39 more)
src/include/: buffer.h  cmark-gfm-extension_api.h  cmark-gfm.h  cmark-gfm_config.h  houdini.h  inlines.h  module.modulemap  mutex.h  node.h  parser.h  references.h  syntax_extension.h
test/: CMakeLists.txt  cjkemphasis.txt  cmark-fuzz.c  cmark.py  entity_tests.py  exhaustion_tests.py  extensions-table-prefer-style-attributes.txt  extensions.txt  front_matter.txt  normalize.py  normalize_html_tests.py  pathological_tests.py  regression.txt  roundtrip.bat  roundtrip.sh  roundtrip_tests.py  smart_punct.txt  spec.txt  spec_tests.py  test_cmark.py  test_remarkor.py
test/afl_test_cases/: test.md
tools/: Dockerfile  make_case_fold_inc.py  make_entities_h.py  make_entities_inc.py  xml2md.xsl  xml2md_gfm.xsl
wrappers/: wrapper.lua  wrapper.php  wrapper.py  wrapper.rb  wrapper.rkt  wrapper_ext.py
